--- a/engines/ember/app/templates/-header.hbs
+++ b/engines/ember/app/templates/-header.hbs
@@ -12,10 +12,15 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>{{link-to 'Home' 'index'}}</li>
-      </ul>
-      <ul class="nav navbar-nav">
         <li>{{link-to 'Projects' 'projects'}}</li>
+        {{#if session.isAuthenticated}} 
+          <li>{{link-to 'Sign out' 'signout'}}</li>
+        {{else}}
+          <li>{{link-to 'Sign up' 'signup'}}</li>
+          <li>{{link-to 'Log in' 'login'}}</li>
+        {{/if}}  
       </ul>
+
     </div><!--/.nav-collapse -->
   </div>
 </nav>
