--- a/engines/ember/app/templates/resend.hbs
+++ b/engines/ember/app/templates/resend.hbs
@@ -1,23 +1,15 @@
-<div class="text center">Resend confirmation link</div>
-
-<div class="form">
-  <form {{action 'sendConfirmation' on='submit'}}>
-    <div class="input">
-      {{input type="email" placeholder='Your Email' value=email}}
-    </div>
+<div class="container col-sm-offset-4 col-sm-3">
+  <form class="form" {{action 'sendConfirmation' on='submit'}}>
+    <h2 clas="form-signin-heading">Resend confirmation link</h2>
+    {{input type="email" placeholder="Your Email" value=model.email class="form-control"}}
     {{#if error}}
       <div class="error-message">{{error}}</div>
     {{/if}}
-    <div class="input">
-      <input type="submit" value="Resend" disabled={{inProcess}}>
-    </div>
+    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Resend" disabled={{inProcess}} required>
   </form>
+  <div class="text center">Need an Account?</div>
+  <div class="buttons">
+    {{#link-to 'signup' class="btn byn-sm btn-default"}}Sign up here{{/link-to}}
+  </div>
 </div>
-<div class="forgot">
-  <span>Forgot password?</span>
-  <a href="#">&raquo; Reset Your Password</a>
-</div>
-<div class="text center">Need an Account?</div>
-<div class="buttons">
-  {{#link-to 'signup' class="btn big"}}Sign up here{{/link-to}}
-</div>
+
