--- a/engines/ember/app/templates/login.hbs
+++ b/engines/ember/app/templates/login.hbs
@@ -1,32 +1,21 @@
-<div class="text center">Log in</div>
-<div class="form">
-  <form {{action 'authenticate' 'withDefault' on='submit'}}>
-    <div class="input">
-              {{input type="email" placeholder='Your Email' value=identification}}
-              <br>
-              {{input type="password" placeholder='Your Password' value=password}}
-    </div>
+<div class="container col-sm-offset-4 col-sm-3">
+  <form class="form" {{action 'authenticate' 'withDefault' on='submit'}}>
+    <h2 clas="form-signin-heading">Log in</h2>
+    {{input type="email" placeholder='Your Email' value=identification class="form-control"}}
+    {{input type="password" placeholder='Your Password' value=password class="form-control"}}
     {{#if error}}
-    <div class="error-message">{{error}}</div>
+      <div class="error-message">{{error}}</div>
     {{/if}}
-    <div class="input">
-      <input type="submit" value="Log in" disabled={{inProcess}}>
-    </div>
+    <input type="submit" class="btn btn-lg btn-primary btn-block"value="Log in" disabled={{inProcess}}>
   </form>
-</div>
-<div class="forgot">
-  <span>Forgot password?</span>
-  <a href="#">&raquo; Reset Your Password</a>
-</div>
-<div class="resend">
-  <!--To prevent undefined in query-params-->
-  {{#if identification}}
-    {{#link-to 'resend' (query-params email=identification) class="blue"}} Resend confirmation link{{/link-to}}
-  {{else}}
-    {{#link-to 'resend' class="blue"}} Resend confirmation link{{/link-to}}
-  {{/if}}
-</div>
-<div class="text center">Need an Account?</div>
-<div class="buttons">
-  {{#link-to 'signup' class="btn big"}}Sign up here{{/link-to}}
+  <div class="resend">
+    {{#if identification}}
+      {{#link-to 'resend' (query-params email=identification) class="blue"}} Resend confirmation link{{/link-to}}
+    {{else}}
+      {{#link-to 'resend' class="blue"}} Resend confirmation link{{/link-to}}
+    {{/if}}
+  </div>
+  <div class="text center">Need an Account?</div>
+  {{#link-to 'signup' class="btn btn-sm btn-default"}}Sign up here{{/link-to}}
+
 </div>
