--- a/engines/ember/app/templates/application.hbs
+++ b/engines/ember/app/templates/application.hbs
@@ -1,4 +1,5 @@
-{{partial 'header'}}
-<div class="container app">
+{{partial 'shared/header'}}
+
   {{outlet}}
-</div>
+
+{{partial 'shared/footer'}}
