--- a/engines/ember/app/templates/shared/-header.hbs
+++ b/engines/ember/app/templates/shared/-header.hbs
@@ -13,7 +13,9 @@
     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
       <ul class="nav navbar-nav">
         <li> {{#link-to 'about'}} About {{/link-to}} </li>
-        <li> {{#link-to 'projects'}} Projects {{/link-to}} </li>
+        {{#if session.isAuthenticated}}
+          <li> {{#link-to 'projects'}} Projects {{/link-to}} </li>
+        {{/if}}
         <li> {{#link-to 'contacts'}} Contacts {{/link-to}} </li>
       </ul>
       
