--- a/engines/ember/app/templates/contacts.hbs
+++ b/engines/ember/app/templates/contacts.hbs
@@ -13,8 +13,8 @@
       <div class="form-group">
         {{textarea value=model.message rows="10" placeholder="Message" class="form-control"}}
       </div>
-      <div {{action "sendContact"}} class="form-group">
-        {{input type="submit" value="Contact Us" class="btn btn-success"}}
+      <div class="form-group">
+        <a href="mailto:opak.alexandr@gmail.com" class="btn btn-success">Contact Us</a>
       </div>
 
     </div>  
