--- a/engines/ember/app/templates/projects/project/show.hbs
+++ b/engines/ember/app/templates/projects/project/show.hbs
@@ -3,3 +3,5 @@
   <hr>
   <p>{{project.description}}</p>                           
 </div>
+
+{{link-to 'Edit' 'projects.project.edit' project.id class='btn btn-xs btn-info'}}
