--- a/engines/ember/app/templates/projects/project/edit.hbs
+++ b/engines/ember/app/templates/projects/project/edit.hbs
@@ -4,12 +4,12 @@
   <form>
     <div class="form-group">
       <label for="">Project title</label>
-      {{input type="text" value=project.title class="form-control" placeholder="Project Name"}}
+      {{input type="text" value=projectName class="form-control" placeholder="Project Name"}}
     </div>
 
     <div class="form-group">
       <label for="">Project description</label>
-      {{textarea rows="10" class="form-control" placeholder="Project description" value=project.description}}
+      {{textarea rows="10" class="form-control" placeholder="Project description" value=projectDesc}}
     </div>
     <button type="submit" class="btn btn-success" {{action "save"}}>Save project</button>                
   </form> 
