--- a/engines/ember/app/styles/app.scss
+++ b/engines/ember/app/styles/app.scss
@@ -27,3 +27,7 @@ body {padding: 50px 0px;}
 small.label { font-weight: normal; display: inline-block; margin: 0 10px}
 img.pull-left { padding-left: 0px;}
 img.pull-right { padding-right: 0px;}
+
+.edit-btn {
+	float: right;
+}
