--- a/engines/ember/app/templates/projects/project/show.hbs
+++ b/engines/ember/app/templates/projects/project/show.hbs
@@ -1,7 +1,6 @@
 <div class="col col-xs-12 col-sm-9">          
-  <h3>{{project.title}}</h3> 
+  <h3>{{project.title}} {{link-to 'Edit' 'projects.project.edit' project.id class='btn btn-info edit-btn'}}</h3>  
   <hr>
   <p>{{project.description}}</p>                           
 </div>
 
-{{link-to 'Edit' 'projects.project.edit' project.id class='btn btn-xs btn-info'}}
