--- a/engines/ember/app/templates/projects/project/edit.hbs
+++ b/engines/ember/app/templates/projects/project/edit.hbs
@@ -1,10 +1,10 @@
 <div class="col col-xs-12 col-sm-9">
-  <h3>Edit project: {{projectTitle}}</h3> 
+  <h3>Edit project: {{project.title}}</h3> 
   <hr>
   <form>
     <div class="form-group">
       <label for="">Project title</label>
-      {{input type="text" value=project.title class="form-control" placeholder="Project Name"}}
+      {{input type="text" value=projectTitle class="form-control" placeholder="Project Name"}}
     </div>
 
     <div class="form-group">
