--- a/engines/ember/app/templates/projects/project/language.hbs
+++ b/engines/ember/app/templates/projects/project/language.hbs
@@ -1,5 +1,5 @@
 <div class="col col-xs-12 col-sm-9">          
-  <h3>Language: EN</h3> 
+  <h3>Language: {{language.id}}</h3> 
   <hr>
   <form>
     <div class="form-group">
@@ -9,7 +9,7 @@
   <hr>
   <form>
     <div class="form-group">
-      <textarea rows="10" class="form-control" placeholder="RAW edit"></textarea>
+      {{textarea rows="10" class="form-control" placeholder="RAW edit" value=rawValue }}
     </div>
     <button type="submit" class="btn btn-success" {{action 'saveRaw'}}>Save RAW</button>                
   </form> 
