--- a/engines/ember/app/templates/shared/-footer.hbs
+++ b/engines/ember/app/templates/shared/-footer.hbs
@@ -1,7 +1,7 @@
 <footer class="navbar-fixed-bottom row-fluid">
   <div class="navbar-inner">
     <div class="container">
-      © 2015 TRS-Ember.
+      © 2016 API-Hogs.
     </div>
   </div>
 </footer>
