--- a/engines/ember/app/templates/index.hbs
+++ b/engines/ember/app/templates/index.hbs
@@ -1,12 +1,11 @@
 <div class="index_block">
   <div class="container">
     <div class="index_text">
-      <h1>Hello, world!</h1>
+      <h1>TRS</h1>
       <p>
-        Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          Another way for localization app
       </p>   
       <p>
-        Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
       </p>        
     </div>
   </div>
@@ -20,16 +19,22 @@
   </div>
   <div class="row">
     <div class="col col-sm-4">
-      <H3>Reason1</H3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+      <H3>Administation</H3>
+      <p>
+      Power Administration part for manage locales
+      </p>
     </div>  
     <div class="col col-sm-4">
-      <H3>Reason2</H3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+      <H3>API</H3>
+      <p>
+        API part with token protection
+      </p>
     </div>  
     <div class="col col-sm-4">
-      <H3>Reason3</H3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+      <H3>Plugins</H3>
+      <p>
+        Plugins system for you js framework
+      </p>
     </div>  
   </div>      
 </div>
