--- a/engines/ember/app/templates/about.hbs
+++ b/engines/ember/app/templates/about.hbs
@@ -9,7 +9,8 @@
     <div class="col col-xs-12">
       <img src="images/bg1.jpg" alt="..." class="img-responsive col col-xs-6 col-sm-4 pull-left">
       <p>
-        Some text about us...
+        A new look at the internationalization of your app.
+        Without conflict, editing directly on the site, rate of change, always in the context of the page. In Api hogs, we often write web solutions with support for many languages, and for the correct translation it is very important to see the context of the content, so after a long search for the right and handy solution, we’ve come to TRS.
       </p>
       <hr>
       <address>
