--- a/engines/ember/app/templates/index.hbs
+++ b/engines/ember/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <div class="index_text">
       <h1>TRS</h1>
       <p>
-          Another way for localization app
+            A new look at the internationalization of your app.
       </p>   
       <p>
       </p>        
@@ -21,19 +21,33 @@
     <div class="col col-sm-4">
       <H3>Administation</H3>
       <p>
-      Power Administration part for manage locales
+        1.Editing on the page of real content.
+        <br />
+        2.Easy control of locals and the creation of new ones.
+        <br />
+        3.The components for diffefent frameworks.
       </p>
     </div>  
     <div class="col col-sm-4">
       <H3>API</H3>
       <p>
-        API part with token protection
+        1.Administrative part
+        <br />
+        2.Server API
+        <br />
+        3.Plugins
       </p>
     </div>  
     <div class="col col-sm-4">
       <H3>Plugins</H3>
       <p>
-        Plugins system for you js framework
+          1.without conflict
+          <br />
+          2.editing directly on the site
+          <br />
+          3.rate of change
+          <br />
+          4.always in the context of the page. 
       </p>
     </div>  
   </div>      
