--- a/engines/ember/app/templates/shared/-header.hbs
+++ b/engines/ember/app/templates/shared/-header.hbs
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to 'index' class='navbar-brand'}} <img src="images/logo.png" alt="brand" /> {{/link-to}}
+      {{#link-to 'index' class='navbar-brand'}} 
+          TRS
+      {{/link-to}}
     </div>
 
     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
