--- a/engines/ember/app/templates/index.hbs
+++ b/engines/ember/app/templates/index.hbs
@@ -13,13 +13,15 @@
 <div class="container">
   <div class="row">
     <div class="col col-xs-12">
-      <h2>3 reasons to choose Trs-ember</h2>
+        <h2>
+        In our company, we often write web solutions with support for many languages, and for the correct translation it is very important to see the context of the content, so after a long search for the right and handy solution, we’ve come to TRS
+        </h2>
       <hr>
     </div>
   </div>
   <div class="row">
     <div class="col col-sm-4">
-      <H3>Administation</H3>
+      <H3>Easy</H3>
       <p>
         1.Editing on the page of real content.
         <br />
@@ -29,7 +31,7 @@
       </p>
     </div>  
     <div class="col col-sm-4">
-      <H3>API</H3>
+      <H3>Complex</H3>
       <p>
         1.Administrative part
         <br />
@@ -39,7 +41,8 @@
       </p>
     </div>  
     <div class="col col-sm-4">
-      <H3>Plugins</H3>
+      <H3>Created for people</H3>
+
       <p>
           1.without conflict
           <br />
